<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/iicpWhite">
    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@mipmap/ic_launcher"/>
    <EditText
        android:id="@+id/txtUsername"
        style="@style/IICPEditText"
        android:hint="@string/txtUsername_text"/>
    <EditText
        android:id="@+id/txtPassword"
        style="@style/IICPEditText"
        android:inputType="textPassword"
        android:hint="@string/txtPassword_text"/>
    <Button
        android:id="@+id/btnLogin"
        style="@style/IICPButton"
        android:text="@string/btnLogin_text" />
</LinearLayout>