<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">
    <TextView
        android:id="@+id/txtRoomNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/iicpWhite"
        android:textColor="@color/iicpRed"
        android:textSize="24dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="20dp">
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/ic_warning"
            android:scaleType="fitXY"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textSize="15dp"
            android:text="@string/txtWarning_text"/>
    </LinearLayout>
    <TextView
        android:id="@+id/txtBookDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/iicpWhite"
        android:textSize="18dp"
        android:padding="15dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/iicpWhite"
        android:padding="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:text="@string/txtTimeSlots_text"/>
        <Spinner
            android:id="@+id/ddlTimeSlots"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/book_time_slots"/>
    </LinearLayout>
    <Button
        android:id="@+id/btnBook"
        style="@style/IICPButton"
        android:text="@string/btnBook_text" />
</LinearLayout>